styling fix on mobile

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -44,6 +44,12 @@ $navTextColor: white;
     margin-top: 1em;
     margin-left: 1em;
 }
+
+.btn {
+	&:hover {
+		cursor: pointer;
+	}
+}
  
 	
 /* ------------------------------------- */
@@ -430,8 +436,29 @@ $navTextColor: white;
 			background: $preset;
 			opacity: 0.9;
 		}
+		#c-2 {
+			padding: 200px 0 130px;
+
+			@media screen and (max-width: 1000px){
+				// padding-top: 75px;
+    			padding-bottom: 175px;
+			}
+			@media screen and (max-width: 700px){
+				padding-top: 75px;
+    			padding-bottom: 175px;
+			}
+		}
 		.contents{
 			padding: 200px 0 130px;
+
+			// @media screen and (max-width: 1000px){
+			// 	// padding-top: 75px;
+    		// 	padding-bottom: 175px;
+			// }
+			// @media screen and (max-width: 700px){
+			// 	padding-top: 75px;
+    		// 	padding-bottom: 175px;
+			// }
 			h1{	
 				color: #fff;
 				font-size: 42px;
